--- a/src/App.css
+++ b/src/App.css
@@ -1,56 +1,66 @@
 .App {
   text-align: center;
 }
-
 .Main {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  height: 200px;
+  justify-content: center;
+  height: 50vh;
 }
-
+.Block-1,
+.Block-2 {
+  height: 100px;
+  width: 100px;
+  background-color: cadetblue;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.Block-1 {
+  position: relative;
+  margin-right: 150px;
+  animation: Block-1-move 5s infinite ease;
+}
 .Start-btn {
   cursor: pointer;
   padding: 11px 26px;
-  background-color: white;
-  border: 1px solid #2c3e50;
+  background-color: black;
+  border: none;
   border-radius: 38px;
-}
-.Start-btn:hover {
-  background-color: rgba(44, 62, 80, 0.08);
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
+.Start-btn:disabled {
+  background-color: gray;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Circle-hidden {
+  display: none;
+}
+.Circle {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background-color: chartreuse;
+  border-radius: 100%;
+  transform: translate(-50%, -50%);
+  animation: moveCircle 2s ease-in-out forwards;
+}
+
+@keyframes Block-1-move {
+  0%,
+  100% {
+    transform: translate(0, -100%);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    transform: translate(0, 100%);
+  }
+}
+@keyframes moveCircle {
+  0% {
+    transform: translate(0, 0);
+  }
+  100% {
+    transform: translate(600%, 0);
   }
 }
